<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimaryDark"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editTextSurename"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="15sp"
        android:textSize="20sp"
        android:ems="10"
        android:hint="@string/surname"
        android:inputType="textPersonName"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white" />

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="15sp"
        android:textSize="20sp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white" />

    <EditText
        android:id="@+id/editTextMiddlename"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="15sp"
        android:textSize="20sp"
        android:ems="10"
        android:hint="@string/middlename"
        android:inputType="textPersonName"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white" />

    <TextView
        android:id="@+id/textViewDob"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15sp"
        android:textSize="20sp"
        android:hint="@string/date"
        android:textColor="@android:color/darker_gray"
        android:textColorHint="@android:color/darker_gray" />

    <Button
        android:id="@+id/buttonCalculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40sp"
        android:layout_marginRight="40sp"
        android:onClick="onClickCalculate"
        android:text="@string/buttonCalculate" />

    <Button
        android:id="@+id/buttonNumberOfFate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40sp"
        android:layout_marginRight="40sp"
        android:onClick="onClickNumberOfFate"
        android:text="@string/buttonNumberOfFate" />

    <Button
        android:id="@+id/buttonNumberOfSoul"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40sp"
        android:layout_marginRight="40sp"
        android:onClick="onClickNumberOfSoul"
        android:text="@string/buttonNumberOfSoul" />

    <Button
        android:id="@+id/buttonNumberOfPersonality"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40sp"
        android:layout_marginRight="40sp"
        android:onClick="onClickNumberOfPersonality"
        android:text="@string/buttonNumberOfPersonality" />

    <Button
        android:id="@+id/buttonNumberOfLifePath"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40sp"
        android:layout_marginRight="40sp"
        android:onClick="onClickNumberOfLifePath"
        android:text="@string/buttonNumberOfLifePath" />

    <Button
        android:id="@+id/buttonBreak"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40sp"
        android:layout_marginRight="40sp"
        android:onClick="onClickBreak"
        android:text="@string/buttonBreak" />



</LinearLayout>